# ch554_sdcc

examples/blink/: main.c
examples/usb_device_hid/: CMakeLists.txt  Key.c  Key.h  USB.c  USB.h  main.c
include/: debug.h
toolchain/: common-ch55-options.cmake  common-ch55-postbuild.cmake  sdcc-toolchain-8051.cmake
